{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 627,
  "lineage": "1aaff128-7f91-735e-128c-f42ca52422cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "byte_barista_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052256ccb70d19676",
            "association_id": "eipassoc-0bae8664464b16a00",
            "domain": "vpc",
            "id": "eipalloc-052256ccb70d19676",
            "instance": "i-08785b384980440dc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b5d53a76b6baa985",
            "private_dns": "ip-10-0-1-32.ec2.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-34-225-46-153.compute-1.amazonaws.com",
            "public_ip": "34.225.46.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "byte_barista_web_eip_0"
            },
            "tags_all": {
              "Name": "byte_barista_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.byte_barista_web",
            "aws_key_pair.bytebarista_kp",
            "aws_security_group.byte_barista_web_sg",
            "aws_subnet.byte_barista_public_subnet",
            "aws_vpc.byte_barista_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "byte_barista_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0481e8ba7f486bd99",
            "arn": "arn:aws:ec2:us-east-1:722935045421:instance/i-08785b384980440dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08785b384980440dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bytebarista",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b5d53a76b6baa985",
            "private_dns": "ip-10-0-1-32.ec2.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-34-225-46-153.compute-1.amazonaws.com",
            "public_ip": "34.225.46.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efb21089221c173f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b973771559ca1460",
            "tags": {
              "Name": "byte_barista_web_0"
            },
            "tags_all": {
              "Name": "byte_barista_web_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-076b5d5e3473c709f"
            ]
          },
          "dependencies": [
            "aws_key_pair.bytebarista_kp",
            "aws_security_group.byte_barista_web_sg",
            "aws_subnet.byte_barista_public_subnet",
            "aws_vpc.byte_barista_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "byte_barista_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:internet-gateway/igw-069fbeec4f66ee2fc",
            "id": "igw-069fbeec4f66ee2fc",
            "owner_id": "722935045421",
            "tags": {
              "Name": "byte_barista_igw"
            },
            "tags_all": {
              "Name": "byte_barista_igw"
            },
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "dependencies": [
            "aws_vpc.byte_barista_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "byte_barista_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:route-table/rtb-0bacc23c05b2b4dec",
            "id": "rtb-0bacc23c05b2b4dec",
            "owner_id": "722935045421",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.byte_barista_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "byte_barista_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:route-table/rtb-076d6e15b82d02eb4",
            "id": "rtb-076d6e15b82d02eb4",
            "owner_id": "722935045421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069fbeec4f66ee2fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.byte_barista_igw",
            "aws_vpc.byte_barista_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552d07ef6f24db8d",
            "route_table_id": "rtb-0bacc23c05b2b4dec",
            "subnet_id": "subnet-00c66bbaa88e42270"
          },
          "dependencies": [
            "aws_route_table.byte_barista_private_rt",
            "aws_subnet.byte_barista_private_subnet",
            "aws_vpc.byte_barista_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006251baa59ed766f",
            "route_table_id": "rtb-0bacc23c05b2b4dec",
            "subnet_id": "subnet-0e64c53145b53cc52"
          },
          "dependencies": [
            "aws_route_table.byte_barista_private_rt",
            "aws_subnet.byte_barista_private_subnet",
            "aws_vpc.byte_barista_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015c34353f74ee412",
            "route_table_id": "rtb-076d6e15b82d02eb4",
            "subnet_id": "subnet-0b973771559ca1460"
          },
          "dependencies": [
            "aws_internet_gateway.byte_barista_igw",
            "aws_route_table.byte_barista_public_rt",
            "aws_subnet.byte_barista_public_subnet",
            "aws_vpc.byte_barista_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "byte_barista_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:security-group/sg-0961080c917ed8b73",
            "description": "Security group for byte_barista databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all-traffic-rds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0961080c917ed8b73",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL traffic from only the web sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076b5d5e3473c709f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "all all traffic from within the external security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "byte_barista_db_sg",
            "name_prefix": "",
            "owner_id": "722935045421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "byte_barista_db_sg"
            },
            "tags_all": {
              "Name": "byte_barista_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.byte_barista_web_sg",
            "aws_vpc.byte_barista_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "byte_barista_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:security-group/sg-076b5d5e3473c709f",
            "description": "Security group for byte_barista web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076b5d5e3473c709f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "159.196.169.63/32"
                ],
                "description": "Allow ssh from my pc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "byte_barista_web_sg",
            "name_prefix": "",
            "owner_id": "722935045421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "byte_barista_web_sg"
            },
            "tags_all": {
              "Name": "byte_barista_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.byte_barista_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "byte_barista_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:subnet/subnet-00c66bbaa88e42270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c66bbaa88e42270",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722935045421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "byte_barista_private_subnet_0"
            },
            "tags_all": {
              "Name": "byte_barista_private_subnet_0"
            },
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "dependencies": [
            "aws_vpc.byte_barista_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:subnet/subnet-0e64c53145b53cc52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e64c53145b53cc52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722935045421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "byte_barista_private_subnet_1"
            },
            "tags_all": {
              "Name": "byte_barista_private_subnet_1"
            },
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "dependencies": [
            "aws_vpc.byte_barista_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "byte_barista_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:subnet/subnet-0b973771559ca1460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b973771559ca1460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722935045421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "byte_barista_public_subnet_0"
            },
            "tags_all": {
              "Name": "byte_barista_public_subnet_0"
            },
            "vpc_id": "vpc-0c0794362b09b1330"
          },
          "dependencies": [
            "aws_vpc.byte_barista_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "byte_barista_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722935045421:vpc/vpc-0c0794362b09b1330",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b4297af15d737e6",
            "default_route_table_id": "rtb-07e66f5fb5b6fbf80",
            "default_security_group_id": "sg-05399ffd7ad2ba397",
            "dhcp_options_id": "dopt-08cb7984a7a927869",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c0794362b09b1330",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e66f5fb5b6fbf80",
            "owner_id": "722935045421",
            "tags": {
              "Name": "byte_barista_vpc"
            },
            "tags_all": {
              "Name": "byte_barista_vpc"
            }
          }
        }
      ]
    }
  ]
}